@@ -138,8 +138,8 @@ Users will typically use the :func:`CalcRMSDRotationalMatrix` function.
 """
 
 import numpy as np
-cimport numpy as np
-np.import_array()
+cimport numpy as cnp
+cnp.import_array()
 cimport cython
 
 from ..due import due, BibTeX, Doi
